# src/web-server.ts
@@ -33,6 +33,7 @@ import { registerSerialRoutes } from './routes/serial';
 import { registerDiskServingRoutes } from './routes/disk-serving';
 import { registerDriveRoutes } from './routes/drives';
 import { registerImageRoutes } from './routes/images';
+import { registerSnapshotRoutes } from './routes/snapshots';
 import { registerCpmRoutes } from './routes/cpm';
 import { registerCassetteRoutes } from './routes/cassettes';
 import { registerTerminalRoutes } from './routes/terminal';
@@ -166,6 +167,7 @@ export class WebServer {
     registerDiskServingRoutes(router, this.deps);
     registerDriveRoutes(router, this.deps);
     registerImageRoutes(router, this.deps);
+    registerSnapshotRoutes(router, this.deps);
     registerCpmRoutes(router, this.deps);
     registerCassetteRoutes(router, this.deps);
     registerTerminalRoutes(router, this.deps);
